--- a/styles/oferta_styles.css
+++ b/styles/oferta_styles.css
@@ -906,6 +906,10 @@ Area bilingue
     margin-right: 0px;
 }
 
+.mostrar-responsive {
+    display: none;
+}
+
 
 /* estilos de botón para regresar arriba */
 
@@ -918,13 +922,13 @@ Area bilingue
 }
 
 .simplescrollup__button--show {
-    transform: translateX(0);
+    transform: translateX(350px);
 }
 
 .simplescrollup__button--hide {
-    transform: translateX(100px);
+    transform: translateX(500px);
 }
 
-.mostrar-responsive {
-    display: none;
+.boton_arriba {
+    width: 13%;
 }
