--- a/styles/acerca_styles.css
+++ b/styles/acerca_styles.css
@@ -575,11 +575,15 @@ slider
 }
 
 .simplescrollup__button--show {
-    transform: translateX(0);
+    transform: translateX(350px);
 }
 
 .simplescrollup__button--hide {
-    transform: translateX(100px);
+    transform: translateX(500px);
+}
+
+.boton_arriba {
+    width: 13%;
 }
 
 
