--- a/styles/oferta_responsive.css
+++ b/styles/oferta_responsive.css
@@ -363,9 +363,6 @@
     h1 {
         font-size: 24px;
     }
-    p {
-        font-size: 13px;
-    }
     .header {
         height: 74px;
     }
@@ -484,11 +481,18 @@
         margin: 0;
     }
     p {
-        font-size: 18px;
-        line-height: 1.7;
+        font-size: 15px;
+        line-height: 1.7 !important;
+        text-align: justify !important;
     }
     h1 {
-        font-size: 25px;
+        font-size: 30px;
+    }
+    .titulo-bachiller {
+        padding: 40px 0px;
+    }
+    .titulo-bachiller h1 {
+        font-size: 35px;
     }
     .accordion_panel li {
         font-size: 20px;
@@ -621,7 +625,17 @@
     }
 }
 
-@media only screen and (max-width: 375px) {}
+@media only screen and (max-width: 375px) {
+    .simplescrollup__button--show {
+        transform: translateX(300px);
+    }
+    .simplescrollup__button--hide {
+        transform: translateX(400px);
+    }
+    .boton_arriba {
+        width: 14%;
+    }
+}
 
 
 /************
@@ -638,14 +652,20 @@
     .accordion_container {
         margin-left: 0%;
     }
-    .titulo-bachiller h1 {
-        font-size: 35px;
-    }
     .dep_container .accordion {
         height: 80px;
         width: 260px;
     }
     .dep_container .elements_accordions {
         padding: 0px;
+    }
+    .simplescrollup__button--show {
+        transform: translateX(250px);
+    }
+    .simplescrollup__button--hide {
+        transform: translateX(400px);
+    }
+    .boton_arriba {
+        width: 17%;
     }
 }
