--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -945,9 +945,13 @@ input:last-of-type {
 }
 
 .simplescrollup__button--show {
-    transform: translateX(0);
+    transform: translateX(350px);
 }
 
 .simplescrollup__button--hide {
-    transform: translateX(100px);
+    transform: translateX(500px);
+}
+
+.boton_arriba {
+    width: 13%;
 }
