--- a/styles/pastoral_styles.css
+++ b/styles/pastoral_styles.css
@@ -463,13 +463,16 @@ Palabras del capeella
 }
 
 .simplescrollup__button--show {
-    transform: translateX(0);
+    transform: translateX(350px);
 }
 
 .simplescrollup__button--hide {
-    transform: translateX(100px);
+    transform: translateX(500px);
 }
 
 .mostrar-responsive {
     display: none;
+}
+.boton_arriba {
+    width: 13%;
 }
