--- a/styles/teachers_responsive.css
+++ b/styles/teachers_responsive.css
@@ -331,3 +331,37 @@
 ************/
 
 @media only screen and (max-width: 400px) {}
+
+/************
+15. 375px
+************/
+
+@media only screen and (max-width: 375px) {
+    .simplescrollup__button--show {
+        transform: translateX(300px);
+    }
+
+    .simplescrollup__button--hide {
+        transform: translateX(400px);
+    }
+    .boton_arriba {
+        width: 14%;
+    }
+}
+
+/************
+16. 320px
+************/
+
+@media only screen and (max-width: 320px) {
+    .simplescrollup__button--show {
+        transform: translateX(250px);
+    }
+
+    .simplescrollup__button--hide {
+        transform: translateX(400px);
+    }
+    .boton_arriba {
+        width: 17%;
+    }
+}
