--- a/styles/acerca_styles.css
+++ b/styles/acerca_styles.css
@@ -119,13 +119,18 @@ slider
     padding-bottom: 0;
 }
 
+.quienes_somos p {
+    text-align: justify;
+    color: #ffffff;
+}
+
 .quienes_somos-img img {
     padding-top: 20px;
     display: flex;
 }
 
 .quienes_somos-titulo {
-    background-color: #b80000;
+    background-color: #ffb606;
 }
 
 .quienes_somos-titulo h1 {
@@ -134,22 +139,19 @@ slider
     color: #ffffff;
     padding-bottom: 30px;
     padding-top: 30px;
-    border-top: 6px solid #ffb606;
+    border-top: 3px solid #ffffff;
     margin-bottom: 0;
-    border-bottom: 6px solid #ffb606;
+    border-bottom: 3px solid #ffffff;
 }
+
 .home_content {
     padding-bottom: 5px;
 }
 
+
 /*********************************
 
 *********************************/
-
-.quienes_somos p {
-    text-align: justify;
-    color: #ffffff;
-}
 
 .fundador {
     display: flex;
@@ -166,7 +168,7 @@ slider
 
 .caja-img-fundador p.cita {
     font-style: italic;
-    font-size: 8pt;
+    font-size: 8pt !important;
     text-align: center;
     margin: 0;
     margin-top: 12px;
@@ -185,6 +187,7 @@ slider
 .seccion-perfil .contenido-texto {
     padding: 30px;
 }
+
 .seccion-perfil .contenido-titulo {
     padding-top: 15px;
 }
@@ -200,6 +203,7 @@ slider
     color: #FFFFFF;
     text-align: justify;
 }
+
 .imagen-vicentino {
     height: 100%;
 }
@@ -339,8 +343,6 @@ slider
 /*********************************
 9. Popular
 *********************************/
-
-.imagen-quienes {}
 
 .acerca {
     border-top: 10px solid #1a1a1a;
