--- a/styles/instalaciones_styles.css
+++ b/styles/instalaciones_styles.css
@@ -393,9 +393,13 @@ instalaciones
 }
 
 .simplescrollup__button--show {
-    transform: translateX(0);
+    transform: translateX(350px);
 }
 
 .simplescrollup__button--hide {
-    transform: translateX(100px);
+    transform: translateX(500px);
+}
+
+.boton_arriba {
+    width: 13%;
 }
